# liberty-reach

./: .env.example  .env.local  .gitignore  Caddyfile  Cargo.toml  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.old  PLAN.md  README.md  build_release.ps1  chat_screen.dart  deploy.ps1  docker-compose.yml  leaderboard.db  liberty-nginx.conf  obsidian-app-gap-plan.md  point_charges.db  requirements.txt  server.py  setup_server.bat  setup_server.ps1  start_server.ps1  transactions.db  web_chat.html  web_server_backup.py
docker/: Dockerfile  docker-compose.yml  liberty-nginx.conf
docs/: architecture.md  privacy.md  tokenomics.md
flutter_app/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_app/android/: build.gradle
flutter_app/lib/: app.dart  main.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/rust/: Cargo.toml
flutter_app/rust/src/: lib.rs
flutter_app/rust/src/ai/: localai.rs
flutter_app/rust/src/api/: liberty_api.rs
flutter_app/rust/src/blockchain/: minima_service.rs
flutter_app/rust/src/p2p/: swarm.rs
flutter_app/rust/src/reward/: mod.rs  reward_service.rs
flutter_app/test/: app_constants_test.dart  p2p_service_test.dart  wallet_service_test.dart  widget_test.dart
flutter_app/web/: index.html  manifest.json
models/cheetah/: .gitkeep
models/localai/: gemma-2-2b.yaml  llava.yaml
models/tflite/: .gitkeep
puter-apps/: LICENSE
puter-apps/drop-shipping/: .gitignore  (+7 more)
rust_core/: Cargo.toml  Dockerfile
scripts/: download_multimodal.ps1  migrate_structure.ps1
server/: leaderboard.db  start.sh  tiktok_feed_api.py
src/: main.rs
(+260 files in other folders)
