[package]
name = "liberty-reach"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["gossipsub", "noise", "yamux", "mdns", "kad", "tcp", "quic", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
flume = "0.11"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
blake3 = "1.5"
