[package]
name = "liberty_reach_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
libp2p = { version = "0.54", features = ["gossipsub", "noise", "yamux", "mdns", "kad", "tcp", "quic", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
flume = "0.11"
tracing = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
rand = "0.8"
blake3 = "1"
once_cell = "1"
